--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,22 +2,37 @@
 title: Mavi - Create server without code
 ---
 
-<img
-  src="https://raw.githubusercontent.com/m-emre-yalcin/mavi/main/public/mavi.svg"
-  alt="Mavi logo"
-  width="200px"
-  align="center"
-/>
+<h1 id="mavi">
+  <img
+    src="https://raw.githubusercontent.com/m-emre-yalcin/mavi/main/public/mavi.svg"
+    alt="Mavi logo"
+    width="200px"
+    align="center"
+  />
+</h1>
+
 _documentation is not complete_
 
-<br />
-
-Create an abstracted and extendible server from one JSON file!
+Create an abstracted and extendible server without coding!
 
 This module aims to lift repetitive works that you have made every time building a server from scratch.
 
+## What Mavi offers?
+
+1. Create an advanced REST API and relational database with one json file
+1. Create relations between models and get data with deep level objects (`populated`) from API
+1. Have essential queries for each route you defined (`sort`,`limit`,`where`,`exclude`), control/secure them!
+1. Define dynamic queries for deep data levels (populated data)
+1. Define static routes and serve static files (like `html pages` or `server uploads`)
+1. Controllers: `find, findOne, count, delete, update, create, upload, login, logout , register`
+1. Middlewares: `authorization, is-owner`
+1. Utils: `detect language` -- will be added more
+1. You can create your own controllers/middlewares/utils too!
+
+These were the fundamentals. There are more features to mention!
+
 ---
 
-`Important`: Mavi is still in development and not recommend to use in production. Don't hesitate to open an issue if encountered a problem.
+`Important`: Mavi is still in development and not recommend to use in production. Don't hesitate to [open an issue](https://github.com/mavi-server/mavi/issues) if encountered a problem.
 
 ---
