--- a/pages/directory-structure/models.mdx
+++ b/pages/directory-structure/models.mdx
@@ -6,13 +6,14 @@ title: Mavi - Models
 
 Models are used to build relational database and used by `controllers`.
 
-### Create models
+### Create models config
 
-First create a `models` folder to project root and add new file as `[model_name].js`.
+First create a `models` folder into your project root and add new files as `[model_name].js` or `[model_name].json`.
 
 Example model file:
 
 ```js
+// customer.js
 module.exports = {
   id: {
     type: 'integer',
@@ -54,20 +55,20 @@ When you use `mavi build`, it will create `[model_name]` table with all defined 
 
 When you make any changes in your model file, you should use `mavi build` again. It will detect the changes and update the database.
 
-### Column Properties
+### Model Properties
 
-1. `type`: Data type. available: 'increments', 'integer', 'bigInteger', 'text', 'string', 'float', 'double', 'decimal', 'boolean', 'date', 'datetime', 'time', 'timestamp', 'binary', 'enum', 'json', 'jsonb', 'uuid', 'geometry', 'geography', 'point'
-1. `constraints`: 'primary' , 'nullable' , 'notNullable' , 'unique' , 'index'
-1. `maxlength`: Max length of the string
-1. `dataset`: Used for `enum` type
-1. `precision`: Used with `datetime`, `time`, `timestamp` types
-1. `useTz`: Used with `datetime`, `timestamp` types. By default PostgreSQL creates column with timezone (timestamptz type) and MSSQL does not (datetime2). This behaviour can be overriden by passing the useTz option (which is by default false for MSSQL and true for PostgreSQL). MySQL does not have useTz option.
-1. `charset`: Sets the charset for the database table, only available within a createTable call, and only applicable to MySQL.
-1. `defaultTo`: Default column value
-1. `comment`: Sets comment for the table column.
-1. `onDelete`: "RESTRICT", "CASADE", "SET NULL", "NO ACTION"
-1. `onUpdate`: "RESTRICT", "CASADE", "SET NULL", "NO ACTION"
-1. `references`: References to another `model` where the foreign key column is located
-1. `unsigned`: Specifies an integer as unsigned. No-op if this is chained off of a non-integer field.
-1. `private`: Private columns are not included in the response.
-1. `hash`: Unique hashes to detect database state changes. If it assigned automatically do not change their values for sustain database state accuracy.
+1. **type**: Data type. available: 'increments', 'integer', 'bigInteger', 'text', 'string', 'float', 'double', 'decimal', 'boolean', 'date', 'datetime', 'time', 'timestamp', 'binary', 'enum', 'json', 'jsonb', 'uuid', 'geometry', 'geography', 'point'
+1. **constraints**: 'primary' , 'nullable' , 'notNullable' , 'unique' , 'index'
+1. **maxlength**: Max length of the string
+1. **dataset**: Used for `enum` type
+1. **precision**: Used with `datetime`, `time`, `timestamp` types
+1. **useTz**: Used with `datetime`, `timestamp` types. By default PostgreSQL creates column with timezone (timestamptz type) and MSSQL does not (datetime2). This behaviour can be overriden by passing the useTz option (which is by default false for MSSQL and true for PostgreSQL). MySQL does not have useTz option.
+1. **charset**: Sets the charset for the database table, only available within a createTable call, and only applicable to MySQL.
+1. **defaultTo**: Default column value
+1. **comment**: Sets comment for the table column.
+1. **onDelete**: "RESTRICT", "CASADE", "SET NULL", "NO ACTION"
+1. **onUpdate**: "RESTRICT", "CASADE", "SET NULL", "NO ACTION"
+1. **references**: References to another `model` where the foreign key column is located
+1. **unsigned**: Specifies an integer as unsigned. No-op if this is chained off of a non-integer field.
+1. **private**: Private columns are not included in the response.
+1. **hash**: Unique hashes to detect database state changes. If it assigned automatically do not change their values for sustain database state accuracy.
