--- a/pages/get-started.mdx
+++ b/pages/get-started.mdx
@@ -493,7 +493,7 @@ You can start your server by using mavi cli.
 ```sh
 `mavi build` # builds the database from your models and seeds
 
-`mavi build --no-seeds` # builds the db without without the seeds
+`mavi build --no-seeds` or `mavi build -ns` # builds the db without without the seeds
 
 `mavi seed` # Seeds the database with your `models/{model_name}.seed.js` files
 
