docs: improve docs

--- a/pages/directory-structure/models.mdx
+++ b/pages/directory-structure/models.mdx
@@ -13,7 +13,7 @@ First create a `models` folder into your project root and add new files as `[mod
 Example model file:
 
 ```js
-// customer.js
+// customers.js
 module.exports = {
   id: {
     type: 'integer',
@@ -119,4 +119,4 @@ module.exports = [
 
 You should run `mavi build` to apply model changes each time.
 
-You can also integrate it with `nodeman` if you wan't instant updates.
+You can also integrate it with `nodemon` if you wan't instant updates.
