--- a/pages/directory-structure/routes.mdx
+++ b/pages/directory-structure/routes.mdx
@@ -6,7 +6,7 @@ title: Mavi - Routes
 
 If you configured previous steps now it is time to create some routes.
 
-Route settings will generate your API with advanced query options, diverse controllers, middlewares, sub-queries, and more...
+Route settings will generate your API with advanced query options, diverse controllers, useful middlewares, dynamic sub-queries, and more...
 
 ### Create routes config
 
