--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -21,7 +21,7 @@ This module aims to lift repetitive works that you have made every time building
 
 1. Create an advanced REST API and relational database with one json file
 1. Create relations between models and get data with deep level objects (`populated`) from API
-1. Have essential queries for each route you defined (`sort`,`limit`,`where`,`exclude`), control/secure them!
+1. Have essential queries for each route you defined (`sort`,`start`,`limit`,`where`,`exclude`), control/secure them!
 1. Define dynamic queries for deep data levels (populated data)
 1. Define static routes and serve static files (like `html pages` or `server uploads`)
 1. Controllers: `find, findOne, count, delete, update, create, upload, login, logout , register`
